# dicekit

./: AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.conductor/: settings.toml
.github/workflows/: tests.yml
dicekit/: __init__.py  learn.py
docs/: index.html
nbs/: __init__.py  build.py  learn.py
tests/: test_basics.py  test_learn.py
