
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicekit"
version = "0.1.4"
description="Domain specific environment for dice"
requires-python = ">=3.12,<3.13"

license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Vincent D. Warmerdam"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "hastyplot", "pandas", "marimo"
]

[dependency-groups]
dev = [
    "pytest",
]

[project.urls]
repository = "https://github.com/koaning/mohtml"
issue-tracker = "https://github.com/koaning/mohtml/issues"
documentation = "https://koaning.github.io/mohtml/"

[tool.setuptools.packages.find]
include = ["dicekit*"]
exclude = [
    "docs",
    "images",
    "notebooks",
    "tests",
]
